--- a/index.html
+++ b/index.html
@@ -1,17 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="./css/style.css">
-   <!-- Google Fonts -->
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-   <title>Pagina Web</title>
-</head>
-<body>
-   <h1>Hola Mundo</h1>
-</body>
+   <head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="./css/style.css">
+      <!-- boxicons.com -->
+      <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+      <!-- Google Fonts -->
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+      <title>Esperiencia Digital</title>
+   </head>
+
+   <body>
+      <header class="hero">
+         <nav class="nav__hero">
+            <div class="container nav__container">
+               <div class="logo">
+                  <h2 class="logo__name">Sofwipad <span class="point">.</span></h2>
+               </div>
+            </div>
+         </nav>
+
+         <section class="container hero__main">
+            <div class="hero__textos">
+               <h1 class="title">La mejor <span class="title">Experiencia Digital.</span></h1>
+               <p class="copy">Nos encargamos de llevar tu idea al <span class="copy__active">siguiente nivel</span></p>
+               <a href="#" class="cta">Agenda una demo</a>
+            </div>
+            <img src="./img/mockup.png" alt="mockup" width="500px">
+         </section>
+      </header>
+   </body>
 </html>
