--- a/index.html
+++ b/index.html
@@ -33,5 +33,30 @@
             <img src="./img/mockup.png" alt="mockup" width="500px">
          </section>
       </header>
+
+      <main>
+         <section class="services">
+            <div class="container">
+               <h2 class="subtitle">Nuestros Servicios <span class="point">.</span></h2>
+               <p class="copy__section">Ofrecemos las soluciones perfectas para revolucion digital</p>
+
+               <article class="container-card">
+                  <div class="card">
+                     <img src="./img/image1.jpg"  class="caed__img" alt="image1">
+                     <div class="cards__text">
+                        <p class="card__list">Especialistas en diseño UX/UI</p>
+                        <h3 class="card__title">Web apps <span class="point">.</span></h3>
+                        <p class="card__copy">
+                           Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                           Tempore blanditiis labore consectetur perspiciatis numquam in nostrum facere, 
+                           quaerat esse nobis!
+                        </p>
+                        <a href="#" class="card__botton">Comienza Tu Proyecto</a>
+                     </div>
+                  </div>
+               </article>
+            </div>
+         </section>
+      </main>
    </body>
 </html>
