--- a/index.html
+++ b/index.html
@@ -42,6 +42,32 @@
 
                <article class="container-card">
                   <div class="card">
+                     <img src="./img/image2.jpg"  class="caed__img" alt="image1">
+                     <div class="cards__text">
+                        <p class="card__list">Especialistas en diseño UX/UI</p>
+                        <h3 class="card__title">Web apps <span class="point">.</span></h3>
+                        <p class="card__copy">
+                           Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                           Tempore blanditiis labore consectetur perspiciatis numquam in nostrum facere, 
+                           quaerat esse nobis!
+                        </p>
+                        <a href="#" class="card__botton">Comienza Tu Proyecto</a>
+                     </div>
+                  </div>
+                  <div class="card">
+                     <img src="./img/image3.jpg"  class="caed__img" alt="image1">
+                     <div class="cards__text">
+                        <p class="card__list">Especialistas en diseño UX/UI</p>
+                        <h3 class="card__title">Ecommerce<span class="point">.</span></h3>
+                        <p class="card__copy">
+                           Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                           Tempore blanditiis labore consectetur perspiciatis numquam in nostrum facere, 
+                           quaerat esse nobis!
+                        </p>
+                        <a href="#" class="card__botton">Comienza Tu Proyecto</a>
+                     </div>
+                  </div>
+                  <div class="card">
                      <img src="./img/image1.jpg"  class="caed__img" alt="image1">
                      <div class="cards__text">
                         <p class="card__list">Especialistas en diseño UX/UI</p>
