add section projects container

--- a/index.html
+++ b/index.html
@@ -83,6 +83,55 @@
                </article>
             </div>
          </section>
+         <section class="projects container">
+            <h2 class="subtitle">Proyectos recientes<span class="point">.</span></h2>
+            <p class="copy__section">Hemos colaborado con marcas reconocidas a nivel mundial</p>
+
+            <article class="container__bg">
+               <div class="card">
+                  <div class="cards__text">
+                     <h3 class="card__title">Diseño Web<span class="point">.</span></h3>
+                     <p class="card__date">24 Agosto 2020</p>
+                     <p class="card__copy">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                        Tempore blanditiis labore consectetur perspiciatis numquam in nostrum facere, 
+                        quaerat esse nobis!
+                     </p>
+                     <a href="#" class="card__botton">Comienza Tu Proyecto</a>
+                  </div>
+               </div>
+               <div class="background">
+                  <img src="./img/background1.jpg" class="background__img" alt="background1">
+                  <div class="background__text">
+                     <h3 class="background__title">La educacion en linea</h3>
+                     <p class="background__copy">
+                        La realidada aumentada transformara por completo la educación.
+                     </p>
+                  </div>
+               </div>
+               <div class="card">
+                  <div class="cards__text">
+                     <h3 class="card__title">Diseño Web<span class="point">.</span></h3>
+                     <p class="card__date">24 Agosto 2020</p>
+                     <p class="card__copy">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                        Tempore blanditiis labore consectetur perspiciatis numquam in nostrum facere, 
+                        quaerat esse nobis!
+                     </p>
+                     <a href="#" class="card__botton">Comienza Tu Proyecto</a>
+                  </div>
+               </div>
+               <div class="background">
+                  <img src="./img/background2.jpg" class="background__img" alt="background2">
+                  <div class="background__text">
+                     <h3 class="background__title">La educacion en linea</h3>
+                     <p class="background__copy">
+                        La realidada aumentada transformara por completo la educación.
+                     </p>
+                  </div>
+               </div>
+            </article>
+         </section>
       </main>
    </body>
 </html>
