--- a/index.html
+++ b/index.html
@@ -132,6 +132,50 @@
                </div>
             </article>
          </section>
+         <section class="testimony">
+            <div class="container">
+               <h2 class="subtitle">Clientes satisfechos<span class="point">.</span></h2>
+               <p class="copy__section">Cientos de empresas confian en nosotros</p>
+
+               <div class="testimony-container">
+                  <div class="testimony__card">
+                     <img src="./img/first-person.jpg" class="testimony__img" alt="first-person">
+                     <div class="testimony__copy">
+                        <i class='bx bxl-google' class="testimony__logo"></i>
+                        <div class="testimony__info">
+                           <h3 class="testimony__name">Andres Garcia</h3>
+                           <p class="testimony__position">Director de Google Colombia</p>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="testimony__card">
+                     <img src="./img/second_person.jpg" class="testimony__img" alt="second_person">
+                     <div class="testimony__copy">
+                        <i class='bx bxl-apple' class="testimony__logo"></i>
+                        <div class="testimony__info">
+                           <h3 class="testimony__name">Andres Garcia</h3>
+                           <p class="testimony__position">Director de Apple Colombia</p>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="testimony__card">
+                     <div class="testimony__text">
+                        <img src="./img/google_logo.svg" alt="Google-logo">
+                        <p class="testimony__history">
+                           "Desde que empezamos a trabajar con Templune comenzamos a obtener resultados increibles.
+                           Ahora hemos llegado a un mayor numero de clientes potenciales"
+                        </p>
+                        <div class="testimony__copy testimony__copy--modifier">
+                           <img src="./img/first-person.jpg" class="testimony__logo logo--picture" alt="first-person">
+                           <div class="testimony__info">
+                              <h3 class="testimony__name">Andres Garcia</h3>
+                              <p class="testimony__position">Director de Apple Colombia</p>
+                           </div>
+                        </div>
+                  </div>
+               </div>
+            </div>
+         </section>
       </main>
    </body>
 </html>
