--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
                <div class="logo">
                   <h2 class="logo__name">Sofwipad <span class="point">.</span></h2>
                </div>
+               <div class="links">
+                  <a href="#" class="link">inicio</a>
+                  <a href="#" class="link">Servicios</a>
+                  <a href="#" class="link">Proyectos</a>
+                  <a href="#" class="link">Cliemtes</a>
+                  <a href="#" class="link link--active">Contactos</a>
+               </div>
             </div>
          </nav>
 
