--- a/index.html
+++ b/index.html
@@ -183,6 +183,38 @@
                </div>
             </div>
          </section>
+         <section class="email container container--modifier">
+            <h2 class="subtitle subtitle--modifier">Somos tu mejor opcion para adoptar la transformacion digital
+               <span class="point">.</span>
+            </h2>
+            <p class="copy__section copy__section--modifier">
+               Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae eaque cum natus. 
+               Tempore sit itaque sapiente nesciunt voluptatibus, numquam perspiciatis?
+            </p>
+            <div class="check">
+               <div class="check__item">
+                  <i class='bx bx-check'></i>
+                  <div class="check__numbers">
+                     <p class="check__number">+200</p>
+                     <p class="check__copy">Proyectos exitosos</p>
+                  </div>
+               </div>
+               <div class="check__item">
+                  <i class='bx bx-check'></i>
+                  <div class="check__numbers">
+                     <p class="check__number">+200</p>
+                     <p class="check__copy">Proyectos exitosos</p>
+                  </div>
+               </div>
+               <div class="check__item">
+                  <i class='bx bx-check'></i>
+                  <div class="check__numbers">
+                     <p class="check__number">+200</p>
+                     <p class="check__copy">Proyectos exitosos</p>
+                  </div>
+               </div>
+            </div>
+         </section>
       </main>
    </body>
 </html>
