add section email

--- a/index.html
+++ b/index.html
@@ -214,6 +214,10 @@
                   </div>
                </div>
             </div>
+            <form action="#" class="newsletter">
+               <input type="text" class="newsletter" placeholder="Ingresa tu email">
+               <input type="submit" class="newsletter__submit" value="Comienza hoy">
+            </form>
          </section>
       </main>
    </body>
