--- a/index.html
+++ b/index.html
@@ -220,5 +220,61 @@
             </form>
          </section>
       </main>
+
+      <footer class="footer">
+         <div class="container footer__caption">
+            <section class="download">
+               <div class="download__add">
+                  <div class="download__item">
+                     <a href="#"><i class='bx bxl-play-store' class="download__logo"></i></a>
+                     <h4 class="download__tittle">Play Store</h4>
+                  </div>
+                  <div class="download__item">
+                     <a href="#"><i class='bx bxl-apple' class="download__logo"></i></a>
+                     <h4 class="download__tittle">App Store</h4>
+                  </div>
+               </div>
+               <div class="footer__copy">
+                  <p class="copyright">Adrian Cortes &copy; 2021 Todos los derechos reservados </p>
+   
+                  <a href="#" class="politica__privacidad politica__privacidad--margin">Politica de privacidad</a>
+                  <a href="#" class="politica__privacidad ">Terminos y condiciones</a>
+               </div>
+            </section>
+            <section class="get-email">
+               <h3 class="title footer">¿Esta listo para trabajar con nosotros?</h3>
+               <form action="#" class="newsletter newsletter--modifier">
+                  <input type="text" class="newsletter" placeholder="Ingresa tu email">
+                  <input type="submit" class="newsletter__submit" value="Comienza hoy">
+               </form>
+               <div class="socialmedia">
+                  <p class="socialmedia__legend">Siguenos en:</p>
+                  <i class='socialmedia__icon bx bxl-facebook-circle' ></i>
+                  <i class='socialmedia__icon bx bxl-linkedin-square'></i>
+                  <i class='socialmedia__icon bx bxl-twitter' ></i>
+                  <i class='socialmedia__icon bx bxl-instagram' ></i>
+                  <i class='socialmedia__icon bx bxl-github' ></i>
+               </div>
+            </section>
+         </div>
+         <div class="contact">
+            <div class="item__contact">
+               <i class='bx bx-copyright contact__icon' ></i>
+               <h3 class="contact__title">Adrian Cortes</h3>
+            </div>
+            <div class="item__contact">
+               <i class='bx bx-mail-send contact__icon' ></i>
+               <h3 class="contact__title">ls-adrian@hotmail.com</h3>
+            </div>
+            <div class="item__contact">
+               <i class='bx bxs-edit-location contact__icon' ></i>
+               <h3 class="contact__title">Medellin, Antioquia, Colombia</h3>
+            </div>
+            <div class="item__contact">
+               <i class='bx bxs-chat contact__icon' ></i>
+               <h3 class="contact__title">Contactanos ahora</h3>
+            </div>
+         </div>
+      </footer>
    </body>
 </html>
