--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                   <h2 class="logo__name">Sofwipad <span class="point">.</span></h2>
                </div>
                <div class="links">
-                  <a href="#" class="link">inicio</a>
+                  <a href="#" class="link">Inicio</a>
                   <a href="#" class="link">Servicios</a>
                   <a href="#" class="link">Proyectos</a>
-                  <a href="#" class="link">Cliemtes</a>
+                  <a href="#" class="link">Clientes</a>
                   <a href="#" class="link link--active">Contactos</a>
                </div>
             </div>
@@ -33,11 +33,11 @@
 
          <section class="container hero__main">
             <div class="hero__textos">
-               <h1 class="title">La mejor <span class="title">Experiencia Digital.</span></h1>
+               <h1 class="title">La mejor <span class="title--active">Experiencia Digital.</span></h1>
                <p class="copy">Nos encargamos de llevar tu idea al <span class="copy__active">siguiente nivel</span></p>
                <a href="#" class="cta">Agenda una demo</a>
             </div>
-            <img src="./img/mockup.png" alt="mockup" width="500px">
+            <img src="./img/mockup.png" class="mockup" alt="mockup">
          </section>
       </header>
 
