add css Testimony

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
          <section class="services">
             <div class="container">
                <h2 class="subtitle">Nuestros Servicios <span class="point">.</span></h2>
-               <p class="copy__section">Ofrecemos las soluciones perfectas para la revolucion digital</p>
+               <p class="copy__section">Ofrecemos las soluciones perfectas para revolucion digital</p>
 
                <article class="container-card">
                   <div class="card">
@@ -145,29 +145,32 @@
                <p class="copy__section">Cientos de empresas confian en nosotros</p>
 
                <div class="testimony-container">
+
                   <div class="testimony__card">
                      <img src="./img/first-person.jpg" class="testimony__img" alt="first-person">
                      <div class="testimony__copy">
-                        <i class='bx bxl-google' class="testimony__logo"></i>
+                        <i class='bx bxl-google testimony__logo'></i>
                         <div class="testimony__info">
                            <h3 class="testimony__name">Andres Garcia</h3>
                            <p class="testimony__position">Director de Google Colombia</p>
                         </div>
                      </div>
                   </div>
+
                   <div class="testimony__card">
                      <img src="./img/second_person.jpg" class="testimony__img" alt="second_person">
                      <div class="testimony__copy">
-                        <i class='bx bxl-apple' class="testimony__logo"></i>
+                        <i class='bx bxl-apple testimony__logo'></i>
                         <div class="testimony__info">
                            <h3 class="testimony__name">Andres Garcia</h3>
                            <p class="testimony__position">Director de Apple Colombia</p>
                         </div>
                      </div>
                   </div>
+
                   <div class="testimony__card">
                      <div class="testimony__text">
-                        <img src="./img/google_logo.svg" alt="Google-logo">
+                        <img src="./img/google_logo.svg" class="google__logo" alt="Google-logo">
                         <p class="testimony__history">
                            "Desde que empezamos a trabajar con Templune comenzamos a obtener resultados increibles.
                            Ahora hemos llegado a un mayor numero de clientes potenciales"
@@ -179,7 +182,9 @@
                               <p class="testimony__position">Director de Apple Colombia</p>
                            </div>
                         </div>
+                     </div>
                   </div>
+
                </div>
             </div>
          </section>
