add css section email

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                </div>
             </div>
             <form action="#" class="newsletter">
-               <input type="text" class="newsletter" placeholder="Ingresa tu email">
+               <input type="text" class="newsletter__input" placeholder="Ingresa tu email">
                <input type="submit" class="newsletter__submit" value="Comienza hoy">
             </form>
          </section>
