--- a/index.html
+++ b/index.html
@@ -229,13 +229,14 @@
       <footer class="footer">
          <div class="container footer__caption">
             <section class="download">
+               <h3 class="title__footer">Descarga nuestra App</h3>
                <div class="download__add">
                   <div class="download__item">
-                     <a href="#"><i class='bx bxl-play-store' class="download__logo"></i></a>
+                     <a href="#"><i class='bx bxl-play-store download__logo'></i></a>
                      <h4 class="download__tittle">Play Store</h4>
                   </div>
                   <div class="download__item">
-                     <a href="#"><i class='bx bxl-apple' class="download__logo"></i></a>
+                     <a href="#"><i class='bx bxl-apple download__logo'></i></a>
                      <h4 class="download__tittle">App Store</h4>
                   </div>
                </div>
@@ -247,9 +248,9 @@
                </div>
             </section>
             <section class="get-email">
-               <h3 class="title footer">¿Esta listo para trabajar con nosotros?</h3>
+               <h3 class="title__footer">¿Esta listo para trabajar con nosotros?</h3>
                <form action="#" class="newsletter newsletter--modifier">
-                  <input type="text" class="newsletter" placeholder="Ingresa tu email">
+                  <input type="text" class="newsletter__input" placeholder="Ingresa tu email">
                   <input type="submit" class="newsletter__submit" value="Comienza hoy">
                </form>
                <div class="socialmedia">
@@ -275,9 +276,9 @@
                <i class='bx bxs-edit-location contact__icon' ></i>
                <h3 class="contact__title">Medellin, Antioquia, Colombia</h3>
             </div>
-            <div class="item__contact">
-               <i class='bx bxs-chat contact__icon' ></i>
-               <h3 class="contact__title">Contactanos ahora</h3>
+            <div class="item__contact item__contact--gold">
+               <i class='bx bxs-chat contact__icon contact__icon--modifier' ></i>
+               <h3 class="contact__title contact__title--modifier">Contactanos ahora</h3>
             </div>
          </div>
       </footer>
