We add modifications to the html

--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
    </head>
 
    <body>
-      <header class="hero">
+      <header class="hero" id="hero">
          <nav class="nav__hero">
             <div class="container nav__container">
                <div class="logo">
                   <h2 class="logo__name">Sofwipad <span class="point">.</span></h2>
                </div>
                <div class="links">
-                  <a href="#" class="link">Inicio</a>
-                  <a href="#" class="link">Servicios</a>
-                  <a href="#" class="link">Proyectos</a>
-                  <a href="#" class="link">Clientes</a>
-                  <a href="#" class="link link--active">Contactos</a>
+                  <a href="#hero" class="link">Inicio</a>
+                  <a href="#services" class="link">Servicios</a>
+                  <a href="#projects" class="link">Proyectos</a>
+                  <a href="#testimony" class="link">Clientes</a>
+                  <a href="#get-email" class="link link--active">Contactos</a>
                </div>
             </div>
          </nav>
@@ -35,30 +35,29 @@
             <div class="hero__textos">
                <h1 class="title">La mejor <span class="title--active">Experiencia Digital.</span></h1>
                <p class="copy">Nos encargamos de llevar tu idea al <span class="copy__active">siguiente nivel</span></p>
-               <a href="#" class="cta">Agenda una demo</a>
+               <a href="#email" class="cta">Agenda una demo</a>
             </div>
             <img src="./img/mockup.png" class="mockup" alt="mockup">
          </section>
       </header>
 
       <main>
-         <section class="services">
+         <section class="services" id="services">
             <div class="container">
                <h2 class="subtitle">Nuestros Servicios <span class="point">.</span></h2>
-               <p class="copy__section">Ofrecemos las soluciones perfectas para revolucion digital</p>
+               <p class="copy__section">Ofrecemos las soluciones perfectas para revolucion la digital</p>
 
                <article class="container-card">
                   <div class="card">
                      <img src="./img/image2.jpg"  class="card__img" alt="image1">
                      <div class="cards__text">
-                        <p class="card__list">Especialistas en diseño UX/UI</p>
+                        <p class="card__list">Software a la Medida</p>
                         <h3 class="card__title">Web apps <span class="point">.</span></h3>
                         <p class="card__copy">
-                           Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                           Tempore blanditiis labore consectetur perspiciatis numquam in nostrum facere, 
-                           quaerat esse nobis!
+                           ¡Rompemos todos los límites con tecnología de punta, innovación en nuestros procesos de 
+                           desarrollo, asesoría empresarial y el equipo más talentoso para resolver todo tipo de reto!
                         </p>
-                        <a href="#" class="card__botton">Comienza Tu Proyecto</a>
+                        <a href="#get-email" class="card__botton">Comienza Tu Proyecto</a>
                      </div>
                   </div>
                   <div class="card">
@@ -67,44 +66,44 @@
                         <p class="card__list">Especialistas en diseño UX/UI</p>
                         <h3 class="card__title">Diseño Web<span class="point">.</span></h3>
                         <p class="card__copy">
-                           Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                           Tempore blanditiis labore consectetur perspiciatis numquam in nostrum facere, 
-                           quaerat esse nobis!
+                           Nuestros desarrolladores y diseñadores trabajan en estrecha colaboración para crear un entorno de 
+                           trabajo creativo y positivo. La funcionalidad de tu proyecto es tan importante para nosotros como 
+                           la estética.
                         </p>
-                        <a href="#" class="card__botton">Comienza Tu Proyecto</a>
+                        <a href="#get-email" class="card__botton">Comienza Tu Proyecto</a>
                      </div>
                   </div>
                   <div class="card">
                      <img src="./img/image1.jpg"  class="card__img" alt="image1">
                      <div class="cards__text">
-                        <p class="card__list">Especialistas en diseño UX/UI</p>
+                        <p class="card__list">Comercio Electrónico</p>
                         <h3 class="card__title">Ecommerce<span class="point">.</span></h3>
                         <p class="card__copy">
-                           Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                           Tempore blanditiis labore consectetur perspiciatis numquam in nostrum facere, 
-                           quaerat esse nobis!
+                           La incorporación de este nuevo método de ventas permite que los clientes accedan de manera 
+                           simple y desde cualquier parte del mundo a los productos y servicios que una empresa ofrece.
                         </p>
-                        <a href="#" class="card__botton">Comienza Tu Proyecto</a>
+                        <a href="#get-email" class="card__botton">Comienza Tu Proyecto</a>
                      </div>
                   </div>
                </article>
             </div>
          </section>
-         <section class="projects container">
+
+         <section class="projects container" id="projects">
             <h2 class="subtitle">Proyectos recientes<span class="point">.</span></h2>
             <p class="copy__section">Hemos colaborado con marcas reconocidas a nivel mundial</p>
 
             <article class="container__bg">
                <div class="card">
                   <div class="cards__text">
-                     <h3 class="card__title">Diseño Web<span class="point">.</span></h3>
-                     <p class="card__date">24 Agosto 2020</p>
+                     <h3 class="card__title">E-Learning<span class="point">.</span></h3>
+                     <p class="card__date"></p>
                      <p class="card__copy">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                        Tempore blanditiis labore consectetur perspiciatis numquam in nostrum facere, 
-                        quaerat esse nobis!
+                        Desarrollamos sistema de gestión del aprendizaje (LMS) que te facilita la creación, impartición, evaluación y 
+                        análisis de formación online. Facilita la vida de tus alumnos y profesores con increíbles funcionalidades y 
+                        potentes herramientas
                      </p>
-                     <a href="#" class="card__botton">Comienza Tu Proyecto</a>
+                     <a href="#get-email" class="card__botton">Programe una demostración</a>
                   </div>
                </div>
                <div class="background">
@@ -112,34 +111,40 @@
                   <div class="background__text">
                      <h3 class="background__title">La educacion en linea</h3>
                      <p class="background__copy">
-                        La realidada aumentada transformara por completo la educación.
+                        Sofwi Campus es un sistema de gestión del aprendizaje (LMS) que te facilita la creación, impartición, 
+                        evaluación y análisis de formación online. 
+                        Facilita la vida de tus alumnos y profesores con increibles funcionalidades y potentes herramientas.
                      </p>
                   </div>
                </div>
                <div class="card">
                   <div class="cards__text">
-                     <h3 class="card__title">Diseño Web<span class="point">.</span></h3>
-                     <p class="card__date">24 Agosto 2020</p>
+                     <h3 class="card__title">Ecommerce<span class="point">.</span></h3>
+                     <p class="card__date"></p>
                      <p class="card__copy">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                        Tempore blanditiis labore consectetur perspiciatis numquam in nostrum facere, 
-                        quaerat esse nobis!
+                        Sofwi Commerce es una solución todo en uno que ofrece el poder de Sofwipad a precios asequibles 
+                        para el comercio electrónico de pequeñas empresas.
                      </p>
-                     <a href="#" class="card__botton">Comienza Tu Proyecto</a>
+                     <a href="#get-email" class="card__botton">Programe una demostración</a>
                   </div>
                </div>
                <div class="background">
-                  <img src="./img/background2.jpg" class="background__img" alt="background2">
+                  <img src="./img/ecommerce.png" class="background__img" alt="background2">
                   <div class="background__text">
-                     <h3 class="background__title">La educacion en linea</h3>
-                     <p class="background__copy">
-                        La realidada aumentada transformara por completo la educación.
+                     <h3 class="background__title">¿Por qué Sofwi Commerce para pequeñas empresas?</h3>
+                     <p class="background__copy--light">
+                        Sofwi Commerce proporciona funciones comerciales centrales integradas que incluyen alojamiento e 
+                        implementación en la nube, soporte, inteligencia empresarial y herramientas para acelerar sus ventas. 
+                        Además, Sofwipad lo empareja con un socio certificado que ofrece paquetes de implementación rápida de 
+                        implementación de bajo costo para ayudarlo a comenzar a funcionar rápida y fácilmente. 
+                        Crear un sitio web de comercio electrónico para pequeñas empresas nunca ha sido tan fácil.
                      </p>
                   </div>
                </div>
             </article>
          </section>
-         <section class="testimony">
+
+         <section class="testimony" id="testimony">
             <div class="container">
                <h2 class="subtitle">Clientes satisfechos<span class="point">.</span></h2>
                <p class="copy__section">Cientos de empresas confian en nosotros</p>
@@ -147,11 +152,11 @@
                <div class="testimony-container">
 
                   <div class="testimony__card">
-                     <img src="./img/first-person.jpg" class="testimony__img" alt="first-person">
+                     <img src="./img/Giovanni-Stella.png" class="testimony__img" alt="first-person">
                      <div class="testimony__copy">
                         <i class='bx bxl-google testimony__logo'></i>
                         <div class="testimony__info">
-                           <h3 class="testimony__name">Andres Garcia</h3>
+                           <h3 class="testimony__name">Giovanni Stella</h3>
                            <p class="testimony__position">Director de Google Colombia</p>
                         </div>
                      </div>
@@ -172,14 +177,14 @@
                      <div class="testimony__text">
                         <img src="./img/google_logo.svg" class="google__logo" alt="Google-logo">
                         <p class="testimony__history">
-                           "Desde que empezamos a trabajar con Templune comenzamos a obtener resultados increibles.
+                           "Desde que empezamos a trabajar con Sofwipad comenzamos a obtener resultados increibles.
                            Ahora hemos llegado a un mayor numero de clientes potenciales"
                         </p>
                         <div class="testimony__copy testimony__copy--modifier">
-                           <img src="./img/first-person.jpg" class="testimony__logo logo--picture" alt="first-person">
+                           <img src="./img/Giovanni-Stella.png" class="testimony__logo logo--picture" alt="first-person">
                            <div class="testimony__info">
-                              <h3 class="testimony__name">Andres Garcia</h3>
-                              <p class="testimony__position">Director de Apple Colombia</p>
+                              <h3 class="testimony__name">Giovanni Stella</h3>
+                              <p class="testimony__position">Director de Google Colombia</p>
                            </div>
                         </div>
                      </div>
@@ -188,13 +193,13 @@
                </div>
             </div>
          </section>
-         <section class="email container container--modifier">
+
+         <section class="email container container--modifier" id="email">
             <h2 class="subtitle subtitle--modifier">Somos tu mejor opcion para adoptar la transformacion digital
                <span class="point">.</span>
             </h2>
             <p class="copy__section copy__section--modifier">
-               Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae eaque cum natus. 
-               Tempore sit itaque sapiente nesciunt voluptatibus, numquam perspiciatis?
+              Contamos con un amplio portafolio de soluciones y servicios para cubrir sus necesidades.
             </p>
             <div class="check">
                <div class="check__item">
@@ -207,15 +212,15 @@
                <div class="check__item">
                   <i class='bx bx-check'></i>
                   <div class="check__numbers">
-                     <p class="check__number">+200</p>
-                     <p class="check__copy">Proyectos exitosos</p>
+                     <p class="check__number">+10</p>
+                     <p class="check__copy">Años de experiencia</p>
                   </div>
                </div>
                <div class="check__item">
                   <i class='bx bx-check'></i>
                   <div class="check__numbers">
-                     <p class="check__number">+200</p>
-                     <p class="check__copy">Proyectos exitosos</p>
+                     <p class="check__number">+100</p>
+                     <p class="check__copy">Clientes Activos</p>
                   </div>
                </div>
             </div>
@@ -247,7 +252,7 @@
                   <a href="#" class="politica__privacidad ">Terminos y condiciones</a>
                </div>
             </section>
-            <section class="get-email">
+            <section class="get-email" id="get-email">
                <h3 class="title__footer">¿Esta listo para trabajar con nosotros?</h3>
                <form action="#" class="newsletter newsletter--modifier">
                   <input type="text" class="newsletter__input" placeholder="Ingresa tu email">
@@ -266,7 +271,7 @@
          <div class="contact">
             <div class="item__contact">
                <i class='bx bx-copyright contact__icon' ></i>
-               <h3 class="contact__title">Adrian Cortes</h3>
+               <h3 class="contact__title">Sofwipad</h3>
             </div>
             <div class="item__contact">
                <i class='bx bx-mail-send contact__icon' ></i>
